# nuring

./: .clang-format  .~lock.AngleCalcs.ods#  .~lock.ControllerValidation.ods#  .~lock.GUI_Layout.ods#  .~lock.Variable Info.ods#  AngleCalcs.ods  AutoGain.ods  CMakeLists.txt  ControllerValidation.ods  GUI_Layout.ods  KeyboardReference.txt  LinuxCommands.txt  MathValidation.ods  README.md  Variable Info.ods  backup-cam  main.cpp
.git_backup/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
0516-1011a/: main.cpp
Fragments/: DisplayInterface.h  FittsConfig.h  FittsInterface.h  SerialInterface.h  TimingInterface.h
MATLAB/: PanelViz.m  PathVisualizer.m
NewVersion/: main.cpp
Obsolete/: ArucoInterface.h
Old Archives/: CalibrationClass.cpp  main.cpp.bak
_Obsolete/: ArucoClass copy.BAK.cpp  DisplayClass copy.BAK.cpp  TestClass.cpp  TestClass.h
cPlusPlusSoftware_0605_1807/: main.cpp
include/: ArucoClass.h  ArucoInterface.h  CalibrationClass.h  CameraInterface.h  CaptureClass.h  CaptureInterface.h  ControllerClass.h  DisplayClass.h  DisplayInterface.h  FittsClass.h  InputClass.h  KalmanClass.h  LoggingClass.h  PacketTypes.h  SerialClass.h  SerialInterface.h  SystemDataManager.h  TasksClass.h  TimingClass.h  TimingInterface.h  TouchscreenClass.h  VirtualWallInterface.h  config.h
logging/: .gitignore  CALIB_d0610_h144344.txt  FITTS.txt  FITTS_d0527_h201444.txt  FITTS_d0527_h201540.txt  FITTS_d0527_h201603.txt  FITTS_d0527_h201614.txt  FITTS_d0527_h201631.txt  FITTS_d0527_h201642.txt  FITTS_d0527_h201649.txt  FITTS_d0527_h201659.txt  FITTS_d0527_h201708.txt  FITTS_d0527_h201720.txt  FITTS_d0527_h201727.txt  FITTS_d0527_h201738.txt  FITTS_d0527_h201747.txt  FITTS_d0527_h201803.txt  FITTS_d0527_h201815.txt  FITTS_d0527_h201822.txt  FITTS_d0527_h201829.txt  FITTS_d0527_h201843.txt  FITTS_d0527_h201851.txt  FITTS_d0527_h201900.txt  FITTS_d0527_h201921.txt  FITTS_d0527_h201927.txt  FITTS_d0527_h201934.txt  FITTS_d0527_h201958.txt  FITTS_d0527_h202010.txt  FITTS_d0527_h202018.txt  FITTS_d0527_h202032.txt  (+155 more)
(+243 files in other folders)
